# vulk

./: .gitattributes  .gitignore  Cargo.toml  README.md
crates/vulk/: Cargo.toml
crates/vulk-ext/: Cargo.toml
crates/vulk-ext/src/: lib.rs
crates/vulk-ext/src/vkx/: buffer.rs  command_buffer.rs  debug_utils.rs  descriptor.rs  device.rs  image.rs  instance.rs  memory.rs  mod.rs  physical_device.rs  query.rs  queue.rs  sampler.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs  transfer.rs
crates/vulk-gen/: Cargo.toml
crates/vulk-gen/src/: main.rs  manifest.ron  manifest.rs
crates/vulk-gen/src/codegen/: api_constants.rs  attributes.rs  base_types.rs  bitmasks.rs  doc.rs  enumerations.rs  extensions.rs  function_pointers.rs  handles.rs  header_file.rs  loader_file.rs  mod.rs  structures.rs  toc.rs  translation.rs  unions.rs
crates/vulk-gen/src/codegen/commands/: analysis.rs  loaders.rs  mod.rs  types.rs  wrappers.rs
crates/vulk-gen/src/codegen/outputs/: header.rs  lib.rs  loader.rs  mod.rs  tests.rs
crates/vulk-gen/src/docs/: mod.rs
crates/vulk-gen/src/registry/: c_types.rs  commands.rs  enums.rs  extensions.rs  features.rs  formats.rs  mod.rs  requires.rs  types.rs  xml.rs
crates/vulk-test/: Cargo.toml
crates/vulk-test/src/: command.rs  debug.rs  descriptor.rs  gpu.rs  main.rs  query.rs  resource.rs  shader.rs
crates/vulk-test/src/demos/: clear.rs  compute.rs  cube.rs  gui.rs  mod.rs  raytracing.rs  triangle.rs  window.rs
crates/vulk/src/: lib.rs  loader.rs  tests.rs  vk.rs
scripts/: publish.sh
