[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Vinh Truong <vinhphuc.truong@gmail.com>"]
categories = ["graphics", "rendering", "game-development"]
description = "Vulkan bindings for Rust, except only the bleeding edge features"
edition = "2021"
keywords = ["vulkan", "graphics"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/phoekz/vulk"
version = "0.1.10"

[workspace.dependencies]
anyhow = "1.0.70"
bytemuck = "1.13.1"
clap = { version = "4.2.4", features = ["derive"] }
env_logger = "0.10.0"
glam = { version = "0.23.0", features = ["bytemuck"] }
heck = "0.4.1"
imagelib = { version = "0.24.6", default-features = false, features = [
    "png",
], package = "image" }
imgui = "0.11.0"
libloading = "0.8.0"
log = "0.4.17"
palette = "0.7.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
raw-window-handle = "0.5.2"
ron = "0.8.0"
roxmltree = "0.18.0"
serde = { version = "1.0.160", features = ["derive"] }
shaderc = "0.8.2"
tempfile = "3.5.0"
thiserror = "1.0.40"
walkdir = "2.3.3"
winit = "0.28.3"
