[package]
authors.workspace = true
edition.workspace = true
name = "vulk-gen"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
heck.workspace = true
log.workspace = true
ron.workspace = true
roxmltree.workspace = true
serde.workspace = true
tempfile.workspace = true
