[package]
name = "vulk-gen"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
heck.workspace = true
log.workspace = true
ron.workspace = true
roxmltree.workspace = true
serde.workspace = true
tempfile.workspace = true
walkdir.workspace = true
