[package]
name = "vulk-test"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vulk = { path = "../vulk" }

anyhow.workspace = true
env_logger.workspace = true
glam.workspace = true
imagelib.workspace = true
imgui.workspace = true
log.workspace = true
palette.workspace = true
rand.workspace = true
rand_pcg.workspace = true
ron.workspace = true
serde.workspace = true
shaderc.workspace = true
