[package]
name = "vulk-test"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
vulk = { version = "0.*", path = "../vulk" }
vulk-ext = { version = "0.*", path = "../vulk-ext" }

anyhow.workspace = true
env_logger.workspace = true
glam.workspace = true
imagelib.workspace = true
imgui.workspace = true
log.workspace = true
palette.workspace = true
rand.workspace = true
rand_pcg.workspace = true
raw-window-handle.workspace = true
ron.workspace = true
serde.workspace = true
shaderc.workspace = true
winit.workspace = true
