[package]
name = "vulk"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
libloading.workspace = true
thiserror.workspace = true
